Pass argument lines to Maven surefire for allowing `sis-javafx` tests to execute.